cfn_benchmark/cfn_templates/sayaligaikawad__csye6225-fall2018/infrastructure/aws/cloudformation/assignment4/csye6225-cf-application.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "AWS CloudFormation Template",
  "Parameters" : {
                "domain" : {
                  "Type" : "String",
                  "Description" : "Your domain name"
                },

                "EC2Key" : {
                  "Type": "String",
                  "Description" : "Include existing keypair"

                }
              },

  "Resources" :
  {
      "webserverSecurityGroup" : {
                "Type" : "AWS::EC2::SecurityGroup",
                "Properties":
                {
                    "GroupName" : "WebServer",
                    "GroupDescription" : "Security group for EC2 instance Web server",
                    "VpcId" : {"Fn::ImportValue" : "csye6225vpcid"},
                    "Tags": [
                    {
                      "Key": "Name",
                      "Value": "csye6225-webapp"
                    }],

                    "SecurityGroupIngress": [
                      {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                      },
                      {
                          "IpProtocol": "tcp",
                          "FromPort": "80",
                          "ToPort": "80",
                          "CidrIp": "0.0.0.0/0"
                        },
                        {
                          "IpProtocol": "tcp",
                          "FromPort": "443",
                          "ToPort": "443",
                          "CidrIp": "0.0.0.0/0"
                        }
                    ]
                }
              },
     "dbserverSecurityGroup":
            {
                "Type": "AWS::EC2::SecurityGroup",
                "Properties": {
                  "GroupName" : "csye6225-rds" ,
                  "VpcId" : {"Fn::ImportValue" : "csye6225vpcid"},
                  "GroupDescription": "Security group for EC2 instance - DB server",
                  "Tags": [
                  {
                    "Key": "Name",
                    "Value": "csye6225-rds"
                  }],

                  "SecurityGroupIngress": [
                    {
                      "IpProtocol": "tcp",
                      "FromPort": "5432",
                      "ToPort": "5432",
                      "SourceSecurityGroupId" : { "Fn::GetAtt":["webserverSecurityGroup","GroupId"]}
                    }
                  ]
                }
              },
      "myDynamoDBTable": {
                "Type": "AWS::DynamoDB::Table",
                "Properties": {
                    "AttributeDefinitions": [{
                        "AttributeName": "id",
                        "AttributeType": "S"
                    }],
                    "KeySchema": [{
                        "AttributeName": "id",
                        "KeyType": "HASH"
                    }],
                    "TableName": "csye6225",
                    "ProvisionedThroughput": {
                        "ReadCapacityUnits": 5,
                        "WriteCapacityUnits": 5
                    }
                }
            },

      "EC2instance" : {
                "Type" : "AWS::EC2::Instance",
                "Properties" : {
                    "InstanceType" : "t2.micro",
                    "ImageId" : "ami-9887c6e7",
                    "KeyName" : {"Ref": "EC2Key"},
                    "Tags": [{
                      "Key" : "Name",
                      "Value" : "MyEC2Instance"
                    }],
                    "BlockDeviceMappings" : [
                      {
                          "DeviceName" : "/dev/sdm",
                          "Ebs" : {
                            "VolumeType" : "gp2",
                            "DeleteOnTermination" : true,
                            "VolumeSize" : "20"
                          }
                      },
                      {
                          "DeviceName" : "/dev/sdk",
                          "NoDevice" : {}
                      }
                    ],
                    "NetworkInterfaces": [ {
                      "AssociatePublicIpAddress": true,
                      "DeviceIndex": "0",
                      "GroupSet": [{"Ref" : "webserverSecurityGroup"}],
                      "SubnetId": {"Fn::ImportValue" : "csye6225subid"}
                      } ]
                    }
                  },
      "myDBSubnetGroup": {
                "Type": "AWS::RDS::DBSubnetGroup",
                  "Properties": {
                      "DBSubnetGroupDescription": "making a RDS subnet from my VPC",
                      "SubnetIds": [{
                          "Fn::ImportValue": "dbsub1"
                      }, {
                          "Fn::ImportValue": "dbsub2"
                      }]
                  }
              },
      "myRDSInstance": {
                "Type": "AWS::RDS::DBInstance",
                "Properties": {
                    "AllocatedStorage": "5",
                    "DBInstanceClass": "db.t2.medium",
                    "DBInstanceIdentifier": "csye6225-spring2018",
                    "DBName": "csye6225",
                    "DBSubnetGroupName": {
                        "Ref": "myDBSubnetGroup"
                    },
                    "Engine": "postgres",
                    "EngineVersion": "10.5",
                    "MasterUsername": "csye6225master",
                    "MasterUserPassword": "csye6225password",
                    "VPCSecurityGroups": [{ "Fn::GetAtt" : [ "dbserverSecurityGroup", "GroupId" ] }],
                    "MultiAZ": false,
                    "PubliclyAccessible": false
                }

                },
      "myS3Bucket": {
                "Type": "AWS::S3::Bucket",
                "Properties": {
                  "BucketName": {
                    "Ref": "domain"
                  }

          }
  }

  }
}
